<resources>
    <!-- Nom de l'application -->
    <string name="app_name">DodoLire</string>

    <!-- Écran d'accueil -->
    <string name="commencer">Commencer</string>
    <string name="bienvenue_sur">Bienvenue sur</string>
    <string name="nom_de_la_creche">Nom de la crèche</string>

    <!-- Connexion -->
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="signup_link">S\'inscrire</string>
    <string name="btn_register">S\'inscrire</string>
    <string name="error_message">Message d\'erreur</string>
    <string name="save_profile">Sauvegarder les modifications</string>

    <!-- Formulaire de génération d'histoire -->
    <string name="type_generation">Que veux-tu générer ?</string>
    <string name="age_enfant">Âge du public</string>
    <string name="theme_histoire">Thème</string>
    <string name="genre_personnage">Genre du personnage</string>
    <string name="prenom_personnage">Prénom du personnage</string>
    <string name="mot_cle">Mot-clé pour ton histoire</string>

    <!-- Placeholders -->
    <string name="hint_prenom">Ex : Léo, Emma...</string>
    <string name="hint_mot_cle">Ex : Magie, courage, arc-en-ciel</string>

    <!-- Suppression d'une histoire archivée -->
    <string name="delete_archive">Supprimer</string>
    <string name="delete_confirmation_message">Voulez-vous vraiment supprimer cette histoire archivée ?</string>
    <string name="delete_confirmation_title">Confirmation</string>
    <string name="story_deleted">Histoire supprimée</string>


    <!-- Boutons -->
    <string name="btn_generer">Générer</string>

    <!-- Accessibilité -->
    <string name="menu_burger">Menu principal</string>
    <string name="logo_application">Logo de l\'application</string>
    <string name="profil_utilisateur">Profil utilisateur</string>

    <!-- Profil -->
    <string name="profil">Profil</string>
    <string name="retour">Retour</string>
    <string name="informations">Informations</string>
    <string name="deconnexion">Déconnexion</string>

    <!-- StoryActivity -->
    <string name="image_histoire">Image de l\'histoire</string>
    <string name="image_scroll_description">Défilement des images de l\'histoire</string>
    <string name="histoire_precedente">Histoire précédente</string>
    <string name="histoire_suivante">Histoire suivante</string>
    <string name="quitter">Quitter</string>
    <string name="recommencer">Recommencer</string>
    <string name="archiver">Archiver</string>
    <string name="histoire_archivee">Histoire archivée</string>
    <string name="menu_ouvert">Menu ouvert</string>
    <string name="story_title_placeholder">Titre de l\'histoire</string>
    <string name="story_content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Doloremque illo quod impedit, id rem adipisci quasi, nostrum illum itaque fuga et! Consequuntur
        reiciendis quam dicta veniam perspiciatis,cum sunt quo?Lorem ipsum, dolor sit amet consectetur
        adipiscing elit.Impedit quasi labore tempora sit soluta consectetur quibusdam odio corrupti
        laborum sapiente neque itaque, omnis atque.Ipsum omnis nobis consequatur enim error.
        Iordipisicing elit. Impedit quasi labore tempora sit soluta consectetur quibusdam odio corrupti
        laborum sapiente neque itaque, omnis atque. Ipsum omnis nobis consequatur enim error.lor</string>

    <!-- Archives -->
    <string name="archives">Archives</string>
    <string name="formulaire">Formulaire</string>
    <string name="lecture_audio">Lecture audio</string>
    <string name="pause_audio">Pause audio</string>
    <string name="no_archives">Aucune histoire archivée</string>
    <string name="tap_to_read">Appuyer pour lire</string>

    <string name="liste_archives">Liste des histoires archivées</string>
</resources>