<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:translationY="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/icon_menu"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/menu_burger"
            app:tint="#5D3A00"
            android:contentDescription="@string/menu_burger" />

        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/dodolire_no_background"
            android:contentDescription="@string/logo_application" />

        <!-- masqué par défaut -->
        <ImageView
            android:id="@+id/icon_profile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/profile"
            app:tint="#5D3A00"
            android:visibility="gone"
            android:contentDescription="@string/profil_utilisateur" />
    </LinearLayout>
</merge>
